[package]
name = "rouler"
description = "A container-like system for generating dice rolls"
keywords = ["dice", "roller", "RPG", "game", "gaming"]
version = "0.1.3"
readme = "README.md"
authors = ["jarcane <jarcane@users.noreply.github.com>"]
license = "MPL-2.0"
homepage = "https://github.com/jarcane/rouler"
documentation = "https://docs.rs/rouler/"
repository = "https://github.com/jarcane/rouler"

[features]
wasm = ["rand/wasm-bindgen"]

[dependencies]
itertools = "0.8"
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.0"
rand = "0.7"
